--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <script src="/main.js"></script>
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Budget Calculator</title>
+  </head>
+  <body>
+    <div class="container">
+      <form id="regForm">
+        <div class="tab">
+          Name:
+          <p>
+            <input placeholder="First name..." oninput="this.className = ''" />
+          </p>
+          <p>
+            <input placeholder="Last name..." oninput="this.className = ''" />
+          </p>
+        </div>
+        <div class="tab">
+          Contact Info:
+          <p><input placeholder="E-mail..." oninput="this.className = ''" /></p>
+          <p><input placeholder="Phone..." oninput="this.className = ''" /></p>
+        </div>
+        <div class="buttons">
+          <button type="button" id="prevBtn" onclick="nextPrev(-1)">
+            Previous
+          </button>
+          <button type="button" id="nextBtn" onclick="nextPrev(1)">
+            Next
+          </button>
+        </div>
+      </form>
+    </div>
+    <div id="results">
+      <h1>hello</h1>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
