--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
         <div class="tab">
           Name:
           <p>
-            <input placeholder="First name..." oninput="this.className = ''" />
+            <input
+              placeholder="First name..."
+              id="startAmountInput"
+              value="1"
+            />
           </p>
           <p>
-            <input placeholder="Last name..." oninput="this.className = ''" />
+            <input placeholder="Last name..." id="x2" value="2.5333" />
           </p>
         </div>
         <div class="tab">
           Contact Info:
-          <p><input placeholder="E-mail..." oninput="this.className = ''" /></p>
-          <p><input placeholder="Phone..." oninput="this.className = ''" /></p>
+          <p><input placeholder="E-mail..." id="budget2" /></p>
+          <p><input placeholder="Phone..." /></p>
         </div>
         <div class="buttons">
           <button type="button" id="prevBtn" onclick="nextPrev(-1)">
@@ -35,6 +39,8 @@
     </div>
     <div id="results">
       <h1>hello</h1>
+      <p id="lol">hi</p>
+      <p id="lol2">hi</p>
     </div>
     <script src="main.js"></script>
   </body>
