--- a/index.html
+++ b/index.html
@@ -10,22 +10,32 @@
     <div class="container">
       <form id="regForm">
         <div class="tab">
-          Name:
-          <p>
-            <input
-              placeholder="First name..."
-              id="startAmountInput"
-              value="1"
-            />
-          </p>
-          <p>
-            <input placeholder="Last name..." id="x2" value="2.5333" />
-          </p>
+          <label>Starting Amount:</label>
+          <input id="startAmount" value="1" />
         </div>
         <div class="tab">
-          Contact Info:
-          <p><input placeholder="E-mail..." id="budget2" /></p>
-          <p><input placeholder="Phone..." /></p>
+          <label>Breakfast:</label>
+          <input id="item1Cat1" value="1" />
+          <label>Lunch:</label>
+          <input id="item2Cat1" value="1" />
+          <label>Dinner:</label>
+          <input id="item3Cat1" value="1" />
+        </div>
+        <div class="tab">
+          <label>Car Hire:</label>
+          <input id="item1Cat2" value="1" />
+          <label>Public Transport:</label>
+          <input id="item2Cat2" value="1" />
+          <label>Taxis/Rideshare:</label>
+          <input id="item3Cat2" value="1" />
+        </div>
+        <div class="tab">
+          <label>Clothing:</label>
+          <input id="item1Cat3" value="1" />
+          <label>Electronics:</label>
+          <input id="item2Cat3" value="1" />
+          <label>Gifts:</label>
+          <input id="item3Cat3" value="1" />
         </div>
         <div class="buttons">
           <button type="button" id="prevBtn" onclick="nextPrev(-1)">
@@ -39,8 +49,13 @@
     </div>
     <div id="results">
       <h1>hello</h1>
-      <p id="lol">hi</p>
-      <p id="lol2">hi</p>
+      <p id="1">hi</p>
+      <p id="2">hi</p>
+      <p id="3">hi</p>
+      <p id="4">hi</p>
+      <p id="5">hi</p>
+      <p id="6">hi</p>
+      <p id="7">hi</p>
     </div>
     <script src="main.js"></script>
   </body>
