--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <form id="regForm">
+      <form id="form">
         <div class="tab">
           <h1>Holiday Budget Calculator</h1>
           <div class="inputs">
