--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
         </div>
       </form>
     </div>
-    <div classs="resultsContainer" id="results">
+    <div id="results">
       <h1 class="dataHeader" id="posNetResult">You are under budget!</h1>
       <h1 class="dataHeader" id="negNetResult">You are over budget!</h1>
       <div class="resultsFinalContainer">
-          <div class="resultsData">
-            <p class="dataHeader">Budget Amount</p>
-            <p class="data" id="startAmountFinal"></p>
-          </div>
-          <div class="resultsData">
-            <p class="dataHeader">Total Expenses</p>
-            <p class="data" id="totalExpenses"></p>
-          </div>
-          <div class="resultsData">
-            <p class="dataHeader">Net Result</p>
-            <p class="data" id="netResult"></p>
-          </div>
+        <div class="resultsData">
+          <p class="dataHeader">Budget Amount</p>
+          <p class="data" id="startAmountFinal"></p>
         </div>
+        <div class="resultsData">
+          <p class="dataHeader">Total Expenses</p>
+          <p class="data" id="totalExpenses"></p>
+        </div>
+        <div class="resultsData">
+          <p class="dataHeader">Net Result</p>
+          <p class="data" id="netResult"></p>
+        </div>
+      </div>
       <div class="resultsTotalContainer">
         <div class="resultsData">
           <p class="dataHeader">Food Expense Total</p>
@@ -95,9 +95,9 @@
         </div>
       </div>
       <div class="buttons">
-          <button type="button" id="restartBtn" onclick="resetForm()">
-            Restart
-          </button>
+        <button type="button" id="restartBtn" onclick="resetForm()">
+          Restart
+        </button>
       </div>
     </div>
     <script src="main.js"></script>
