--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
       </form>
     </div>
     <div id="results">
-      <h1 class="dataHeader" id="posNetResult">You are under budget!</h1>
-      <h1 class="dataHeader" id="negNetResult">You are over budget!</h1>
+      <h1 class="dataHeader" id="posNetResult">
+        You are under budget!
+        <img src="./images/smile.png" />
+      </h1>
+      <h1 class="dataHeader" id="negNetResult">
+        You are over budget!
+        <img src="./images/sad.png" />
+      </h1>
       <div class="resultsFinalContainer">
         <div class="resultsData">
           <p class="dataHeader">Budget Amount</p>
