--- a/index.html
+++ b/index.html
@@ -60,43 +60,45 @@
       </form>
     </div>
     <div id="results">
-      <h1 class="dataHeader" id="posNetResult">
+      <h1 class="resultsHeader" id="posNetResult">
         You are under budget!
+        <!-- pngfind. 2022. Smiling Emoji. Image. https://www.pngfind.com/mpng/JRbiJ_download-slightly-smiling-emoji-icon-emojis-png-ios/. -->
         <img src="./images/smile.png" />
       </h1>
-      <h1 class="dataHeader" id="negNetResult">
+      <h1 class="resultsHeader" id="negNetResult">
         You are over budget!
+        <!-- pngfind. 2022. Sad Emoji. Image. https://www.pngfind.com/mpng/iRoJJhh_emoji-emojisticker-freetoedit-sad-depressed-cry-hd-png/. -->
         <img src="./images/sad.png" />
       </h1>
       <div class="resultsFinalContainer">
         <div class="resultsData">
-          <p class="dataHeader">Budget Amount</p>
+          <p class="resultsHeader">Budget Amount</p>
           <p class="data" id="startAmountFinal"></p>
         </div>
         <div class="resultsData">
-          <p class="dataHeader">Total Expenses</p>
+          <p class="resultsHeader">Total Expenses</p>
           <p class="data" id="totalExpenses"></p>
         </div>
         <div class="resultsData">
-          <p class="dataHeader">Net Result</p>
+          <p class="resultsHeader">Net Result</p>
           <p class="data" id="netResult"></p>
         </div>
       </div>
       <div class="resultsTotalContainer">
         <div class="resultsData">
-          <p class="dataHeader">Food Expense Total</p>
+          <p class="resultsHeader">Food Expense Total</p>
           <p class="data" id="totalExpensesCat1"></p>
         </div>
         <div class="resultsData">
-          <p class="dataHeader">Shopping Expense Total</p>
+          <p class="resultsHeader">Shopping Expense Total</p>
           <p class="data" id="totalExpensesCat2"></p>
         </div>
         <div class="resultsData">
-          <p class="dataHeader">Travel Expense Total</p>
+          <p class="resultsHeader">Travel Expense Total</p>
           <p class="data" id="totalExpensesCat3"></p>
         </div>
         <div class="resultsData">
-          <p class="dataHeader">Avg. Expense per Item</p>
+          <p class="resultsHeader">Avg. Expense per Item</p>
           <p class="data" id="avgItemExpense"></p>
         </div>
       </div>
