--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
         <div class="tab">
           <h1>Holiday Budget Calculator</h1>
           <div class="inputs">
-            <label>Budget Amount</label>
+            <label>Budget Amount ($)</label>
             <input id="startAmount" value="0" />
           </div>
         </div>
         <div class="tab">
           <h1>Food Expenses</h1>
           <div class="inputs">
-            <label>Breakfast</label>
+            <label>Breakfast ($)</label>
             <input id="item1Cat1" value="0" />
-            <label>Lunch</label>
+            <label>Lunch ($)</label>
             <input id="item2Cat1" value="0" />
-            <label>Dinner</label>
+            <label>Dinner ($)</label>
             <input id="item3Cat1" value="0" />
           </div>
         </div>
         <div class="tab">
           <h1>Travel Expenses</h1>
           <div class="inputs">
-            <label>Car Hire</label>
+            <label>Car Hire ($)</label>
             <input id="item1Cat2" value="0" />
-            <label>Public Transport</label>
+            <label>Public Transport ($)</label>
             <input id="item2Cat2" value="0" />
-            <label>Taxi/Rideshare</label>
+            <label>Taxi/Rideshare ($)</label>
             <input id="item3Cat2" value="0" />
           </div>
         </div>
         <div class="tab">
           <h1>Shopping Expenses</h1>
           <div class="inputs">
-            <label>Clothing</label>
+            <label>Clothing ($)</label>
             <input id="item1Cat3" value="0" />
-            <label>Electronics</label>
+            <label>Electronics ($)</label>
             <input id="item2Cat3" value="0" />
-            <label>Gifts</label>
+            <label>Gifts ($)</label>
             <input id="item3Cat3" value="0" />
           </div>
         </div>
