--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
       <h1 class="resultsHeader" id="posNetResult">
         You are under budget!
         <!-- pngfind. 2022. Smiling Emoji. Image. https://www.pngfind.com/mpng/JRbiJ_download-slightly-smiling-emoji-icon-emojis-png-ios/. -->
-        <img src="./images/smile.png" />
+        <img src="./images/smile.png" alt=""/>
       </h1>
       <h1 class="resultsHeader" id="negNetResult">
         You are over budget!
         <!-- pngfind. 2022. Sad Emoji. Image. https://www.pngfind.com/mpng/iRoJJhh_emoji-emojisticker-freetoedit-sad-depressed-cry-hd-png/. -->
-        <img src="./images/sad.png" />
+        <img src="./images/sad.png" alt=""/>
       </h1>
       <div class="resultsFinalContainer">
         <div class="resultsData">
